name:                mastermind
version:             0.1.0.0
synopsis:            Mastermind game in Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/mastermind#readme
license:             BSD3
license-file:        LICENSE
author:              Dima
maintainer:          dima.samoz@gmail.com
copyright:           2016 Dima
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable mastermind
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       CompActions
                     , PrintParse
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , random
